@@ -11,7 +11,7 @@
 
 	<name>opensrp-server-openlmis</name>
 	<description>OpenSRP Server OpenLMIS module</description>
-	<url>http://github.com/OpenSRP/opensrp-server-openlmis</url>
+	<url>https://github.com/OpenSRP/opensrp-server-openlmis</url>
 
 	<modules>
 		<module>openlmis-stock</module>
@@ -23,9 +23,12 @@
 		<motech.contrib.group>org.motechproject.contrib-drishti</motech.contrib.group>
 		<motech.contrib.version>0.1-SNAPSHOT</motech.contrib.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>3.1.1.RELEASE</spring.version>
+		<spring.version>5.2.4.RELEASE</spring.version>
+		<spring.data.version>2.2.4.RELEASE</spring.data.version>
+		<mybatis.version>3.5.4</mybatis.version>
+		<mybatis.spring.version>2.0.3</mybatis.spring.version>
 		<mysql.connector.version>5.1.36</mysql.connector.version>
-		<jackson.version>1.9.7</jackson.version>
+		<jackson.version>2.10.0</jackson.version>
 		<opensrp.updatePolicy>always</opensrp.updatePolicy>
 		<maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
 		<nexus-staging-maven-plugin.version>1.5.1</nexus-staging-maven-plugin.version>
@@ -68,7 +71,7 @@
 			<email>info@smartregister.org</email>
 			<url>https://groups.google.com/forum/#!forum/opensrp-dev</url>
 			<organization>OpenSRP</organization>
-			<organizationUrl>http://smartregister.org</organizationUrl>
+			<organizationUrl>https://smartregister.org</organizationUrl>
 			<roles>
 				<role>developer</role>
 			</roles>
@@ -76,18 +79,10 @@
 		</developer>
 	</developers>
 
-	<pluginRepositories>
-		<pluginRepository>
-			<id>jasmine-js-bdd</id>
-			<name>Jasmine JavaScript BDD Repository</name>
-			<url>http://searls-maven-repository.googlecode.com/svn/trunk/snapshots</url>
-		</pluginRepository>
-	</pluginRepositories>
-
 	<repositories>
 		<repository>
 			<id>central</id>
-			<url>http://repo1.maven.org/maven2</url>
+			<url>https://repo1.maven.org/maven2</url>
 			<name>Repository for dependencies</name>
 			<snapshots>
 				<enabled>true</enabled>
@@ -96,33 +91,12 @@
 		<repository>
 			<id>spring-maven-release</id>
 			<name>Spring Maven Release Repository</name>
-			<url>http://maven.springframework.org/release</url>
+			<url>https://maven.springframework.org/release</url>
 		</repository>
 		<repository>
 			<id>spring-maven-milestone</id>
 			<name>Spring Maven Milestone Repository</name>
-			<url>http://maven.springframework.org/milestone</url>
-		</repository>
-		<repository>
-			<id>motech.opensrp</id>
-			<name>Motech Snapshots Repository</name>
-			<url>http://nexus.motechproject.org/content/repositories/opensrp-server</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>motech.nexus</id>
-			<name>Motech Snapshots Repository</name>
-			<url>http://nexus.motechproject.org/content/repositories/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>motech.nexus.release</id>
-			<name>Motech Snapshots Repository</name>
-			<url>http://nexus.motechproject.org/content/repositories/releases</url>
+			<url>https://maven.springframework.org/milestone</url>
 		</repository>
 	</repositories>
 	<profiles>
@@ -196,10 +170,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>11</source>
+					<target>11</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -260,13 +234,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20</version>
+				<version>2.22.2</version>
 				<configuration>
 					<printSummary>true</printSummary>
 					<excludes>
 						<exclude>**/it/**</exclude>
 					</excludes>
-
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
